--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<html><body><h1>rtapi works here!!!!!!!!!!!!!!!!!!!!!!!!!</h1></body></html>
+<html><body><h1>apache is up and running/h1></body></html>
